# MovingMast

./: Demo Interface 1.ipynb  DemoInterface2.ipynb  Kepler_Search_Example.ipynb  MastDashboard.ipynb  Moving_Targets_Basic_Workflow.ipynb  Procfile  README.md  env.yml  mast_tap.py  moving_targets.txt  plotting.py  polygon.py  requirements.txt  scratch.py  setup.cfg  setup.py  target.py  viz.py
misc/: README.md  scratch.py
movingmast/: mast_tap.py  plotting.py  polygon.py  target.py  viz.py
