[metadata]
name = movingmast
author = David Rodriguez
author_email = drodriguez@stsci.edu
license = BSD 3-Clause
license_file = LICENSE
url =  
description = Prototype scripts for searching moving targets with MAST
long_description =
edit_on_github = False
github_project = dr-rodriguez/MovingMast

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy>=4.0
    jupyter
    notebook
    bokeh
    matplotlib
    panel
    pandas
    astroquery
    regions
    pyvo
